// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`session-recording utils parseKafkaBatch can parse and reduce a batch of messages 1`] = `
Array [
  Object {
    "distinct_id": "c3936f0b-875f-4992-8e8a-26499d1f3a0a",
    "eventsByWindowId": Object {
      "b8d205d5-dd89-4465-b2d5-eb4d1eceb3ea": Array [
        Object {
          "data": Object {},
          "timestamp": 123,
          "type": 6,
        },
        Object {
          "data": Object {},
          "timestamp": 438,
          "type": 6,
        },
      ],
      "c74d85fa-ccbb-43ba-981c-5e7d17f211de": Array [
        Object {
          "data": Object {},
          "timestamp": 433,
          "type": 6,
        },
      ],
    },
    "eventsRange": Object {
      "end": 438,
      "start": 123,
    },
    "metadata": Object {
      "consoleLogIngestionEnabled": true,
      "highOffset": 235,
      "lowOffset": 232,
      "partition": 1,
      "rawSize": 13,
      "timestamp": 100,
      "topic": "the_topic",
    },
    "session_id": "e38da031-6341-4db8-ab00-af04f91f9962",
    "snapshot_source": undefined,
    "team_id": 1,
  },
  Object {
    "distinct_id": "207f0e52-f265-4932-86e5-cec62844d990",
    "eventsByWindowId": Object {
      "0bbe7878-6516-46b2-80cf-e387839d7313": Array [
        Object {
          "data": Object {},
          "timestamp": 222,
          "type": 6,
        },
      ],
    },
    "eventsRange": Object {
      "end": 222,
      "start": 222,
    },
    "metadata": Object {
      "consoleLogIngestionEnabled": true,
      "highOffset": 233,
      "lowOffset": 233,
      "partition": 1,
      "rawSize": 30,
      "timestamp": 101,
      "topic": "the_topic",
    },
    "session_id": "1fc12a30-5a0f-4af8-808a-328423acf0c4",
    "snapshot_source": undefined,
    "team_id": 1,
  },
  Object {
    "distinct_id": "9696eba5-4f24-4f06-957b-10f98e26f2a9",
    "eventsByWindowId": Object {
      "1260fae8-08b5-4e5f-bea1-b8abd6250b70": Array [
        Object {
          "data": Object {},
          "timestamp": 432,
          "type": 6,
        },
      ],
    },
    "eventsRange": Object {
      "end": 432,
      "start": 432,
    },
    "metadata": Object {
      "consoleLogIngestionEnabled": true,
      "highOffset": 500,
      "lowOffset": 500,
      "partition": 2,
      "rawSize": 100,
      "timestamp": 98,
      "topic": "the_topic",
    },
    "session_id": "cb91c812-98d0-4d5f-ae88-ffb68b7f51d3",
    "snapshot_source": undefined,
    "team_id": 1,
  },
]
`;

exports[`session-recording utils parseKafkaBatch does not merge sessions for different teams 1`] = `
Array [
  Object {
    "distinct_id": "c3936f0b-875f-4992-8e8a-26499d1f3a0a",
    "eventsByWindowId": Object {
      "b8d205d5-dd89-4465-b2d5-eb4d1eceb3ea": Array [
        Object {
          "data": Object {},
          "timestamp": 123,
          "type": 6,
        },
        Object {
          "data": Object {},
          "timestamp": 124,
          "type": 6,
        },
      ],
    },
    "eventsRange": Object {
      "end": 124,
      "start": 123,
    },
    "metadata": Object {
      "consoleLogIngestionEnabled": true,
      "highOffset": 233,
      "lowOffset": 232,
      "partition": 1,
      "rawSize": 9,
      "timestamp": 100,
      "topic": "the_topic",
    },
    "session_id": "e38da031-6341-4db8-ab00-af04f91f9962",
    "snapshot_source": undefined,
    "team_id": 9,
  },
  Object {
    "distinct_id": "c3936f0b-875f-4992-8e8a-26499d1f3a0a",
    "eventsByWindowId": Object {
      "b8d205d5-dd89-4465-b2d5-eb4d1eceb3ea": Array [
        Object {
          "data": Object {},
          "timestamp": 127,
          "type": 6,
        },
      ],
    },
    "eventsRange": Object {
      "end": 127,
      "start": 127,
    },
    "metadata": Object {
      "consoleLogIngestionEnabled": true,
      "highOffset": 234,
      "lowOffset": 234,
      "partition": 1,
      "rawSize": 20,
      "timestamp": 103,
      "topic": "the_topic",
    },
    "session_id": "e38da031-6341-4db8-ab00-af04f91f9962",
    "snapshot_source": undefined,
    "team_id": 13,
  },
]
`;

exports[`session-recording utils parseKafkaMessage can parse a message correctly 1`] = `
Object {
  "distinct_id": "my-distinct-id",
  "eventsByWindowId": Object {
    "018a47c2-2f4a-70a8-b480-5e52f5480448": Array [
      Object {
        "data": Object {
          "payload": Object {
            "level": "log",
            "payload": Array [
              "\\"Hedgehog: Will 'jump' for 2916.6666666666665ms\\"",
            ],
            "trace": Array [
              "HedgehogActor.setAnimation (http://127.0.0.1:8000/static/toolbar.js?_ts=1693421010000:105543:17)",
              "HedgehogActor.setRandomAnimation (http://127.0.0.1:8000/static/toolbar.js?_ts=1693421010000:105550:14)",
              "HedgehogActor.update (http://127.0.0.1:8000/static/toolbar.js?_ts=1693421010000:105572:16)",
              "loop (http://127.0.0.1:8000/static/toolbar.js?_ts=1693421010000:105754:15)",
            ],
          },
          "plugin": "rrweb/console@1",
        },
        "timestamp": 1693422950693,
        "type": 6,
      },
    ],
  },
  "eventsRange": Object {
    "end": 1693422950693,
    "start": 1693422950693,
  },
  "metadata": Object {
    "consoleLogIngestionEnabled": false,
    "highOffset": 1,
    "lowOffset": 1,
    "partition": 1,
    "rawSize": 42,
    "timestamp": 1,
    "topic": "the_topic",
  },
  "session_id": "018a47c2-2f4a-70a8-b480-5e51d8b8d070",
  "snapshot_source": undefined,
  "team_id": 1,
}
`;
